fix: use deploy key for release-please

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,14 +1,27 @@
- on:
-   push:
-     branches:
-       - main
- name: release-please
- jobs:
-   release-please:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: GoogleCloudPlatform/release-please-action@v2
-         with:
-           token: ${{ secrets.GITHUB_TOKEN }}
-           release-type: node
-           package-name: release-please-action
+name: release-please
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: GoogleCloudPlatform/release-please-action@v2
+        with:
+          token: ${{ secrets.COMMIT_TOKEN }}
+          release-type: node
+          package-name: release-please-action
+          changelog-types: '[{"type": "build", "section": "Other"},
+                            {"type": "ci", "section": "Other"},
+                            {"type": "chore", "section": "Other"},
+                            {"type": "docs", "section": "Other"},
+                            {"type": "feat", "section": "Features"},
+                            {"type": "fix", "section": "Bug Fixes"},
+                            {"type": "perf", "section": "Other"},
+                            {"type": "refactor", "section": "Other"},
+                            {"type": "revert", "hidden": true},
+                            {"type": "style", "section": "Other"},
+                            {"type": "test", "section": "Other"}]'
