--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - release/**
 
 jobs:
   release-please:
@@ -17,6 +18,7 @@ jobs:
         with:
           release-type: node
           package-name: release-please-action
+          default-branch: ${{ github.ref_name }}
           changelog-types: '[{"type": "build", "section": "Other"},
                             {"type": "ci", "section": "Other"},
                             {"type": "chore", "section": "Other"},
@@ -32,8 +34,12 @@ jobs:
   deploy-staging:
     runs-on: ubuntu-latest
     environment: stg
+    needs: [release-please]
+    if: ${{ !needs.release-please.outputs.release_created }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref_name }}
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -43,7 +49,7 @@ jobs:
 
   create-release-branch:
     runs-on: ubuntu-latest
-    needs: [deploy-staging, release-please]
+    needs: [release-please]
     if: ${{ needs.release-please.outputs.release_created }}
     env:
       RELEASE_BRANCH: release/${{ needs.release-please.outputs.tag_name }}
@@ -55,6 +61,26 @@ jobs:
         run: git checkout -b ${{ env.RELEASE_BRANCH }}
       - name: Push new branch
         run: git push origin ${{ env.RELEASE_BRANCH }}
+
+  create-pull-request:
+    runs-on: ubuntu-latest
+    needs: [create-release-branch]
+    if: ${{ startsWith(github.ref_name, release/) }}
+    env:
+      RELEASE_BRANCH: ${{ needs.create-release-branch.outputs.release_branch }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ env.RELEASE_BRANCH }}
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: ${{ env.RELEASE_BRANCH }}
+          base: main
+          title: 'hotfix: ${{ env.RELEASE_BRANCH }}'
+          description: 'This pull request is automatically generated when a hotfix is deployed
+                        to a release branch. Merge this pull request to include the hotfix
+                        in the main branch.'
 
   deploy-production:
     runs-on: ubuntu-latest
