ci: fix pull request job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
   create-pull-request:
     runs-on: ubuntu-latest
     needs: [create-release-branch]
-    if: ${{ startsWith(github.ref_name, release/) }}
+    if: ${{ startsWith(github.ref_name, 'release/') }}
     env:
       RELEASE_BRANCH: ${{ needs.create-release-branch.outputs.release_branch }}
     steps:
