--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,14 +1,14 @@
 {
     "types": [
       {"type": "build", "section": "Other"},
-      {"type": "chore", "section": "Other"},
       {"type": "ci", "section": "Other"},
+      {"type": "chore", "section": "Other"},
       {"type": "docs", "section": "Other"},
       {"type": "feat", "section": "Features"},
       {"type": "fix", "section": "Bug Fixes"},
       {"type": "perf", "section": "Other"},
       {"type": "refactor", "section": "Other"},
-      {"type": "revert", "section": true},
+      {"type": "revert", "hidden": true},
       {"type": "style", "section": "Other"},
       {"type": "test", "section": "Other"}
     ]
