--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -3,14 +3,14 @@ name: Manual Deploy
 on: workflow_dispatch
 
 jobs:
+  deploy-staging:
+    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
+    with:
+      branch: ${{ github.ref_name }}
+      environment: stg
+
   deploy-production:
-    runs-on: ubuntu-latest
-    environment: prd
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          buildpack: https://github.com/mars/create-react-app-buildpack.git
+    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
+    with:
+      branch: ${{ github.ref_name }}
+      environment: prd
