--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -4,13 +4,13 @@ on: workflow_dispatch
 
 jobs:
   deploy-staging:
-    uses: ./.github/workflows/deploy.yml@main
+    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
     with:
       branch: ${{ github.ref_name }}
       environment: stg
 
   deploy-production:
-    uses: ./.github/workflows/deploy.yml@main
+    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
     with:
       branch: ${{ github.ref_name }}
       environment: prd
