ci: refactor ci

--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -4,13 +4,31 @@ on: workflow_dispatch
 
 jobs:
   deploy-staging:
-    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
-    with:
-      branch: ${{ github.ref_name }}
-      environment: stg
+    runs-on: ubuntu-latest
+    environment: stg
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref_name }}
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          buildpack: https://github.com/mars/create-react-app-buildpack.git
+          branch: ${{ github.ref_name }}
 
   deploy-production:
-    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
-    with:
-      branch: ${{ github.ref_name }}
-      environment: prd
+    runs-on: ubuntu-latest
+    environment: prd
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref_name }}
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          buildpack: https://github.com/mars/create-react-app-buildpack.git
+          branch: ${{ github.ref_name }}
