--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -22,18 +22,36 @@ jobs:
       - run: git push --follow-tags origin release/v${{ steps.version.outputs.version }}
 
   deploy-staging:
+    runs-on: ubuntu-latest
     needs: [release]
-    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
-    with:
-      branch: ${{ needs.release.outputs.release_branch }}
-      environment: stg
+    environment: stg
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ needs.release.outputs.release_branch }}
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          buildpack: https://github.com/mars/create-react-app-buildpack.git
+          branch: ${{ needs.release.outputs.release_branch }}
   
   deploy-production:
+    runs-on: ubuntu-latest
     needs: [release, deploy-staging]
-    uses: austinmitchem/eager-euler/.github/workflows/deploy.yml@main
-    with:
-      branch: ${{ needs.release.outputs.release_branch }}
-      environment: prd
+    environment: prd
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ needs.release.outputs.release_branch }}
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          buildpack: https://github.com/mars/create-react-app-buildpack.git
+          branch: ${{ needs.release.outputs.release_branch }}
 
   create-pull-request:
     runs-on: ubuntu-latest
