--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.ref_name }}
+      - run: npm install
       - run: npm run release
       - id: version
         run: |
