--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -14,13 +14,21 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.ref_name }}
-      - run: npm install
-      - run: npm run release
-      - id: version
+      - name: Run standard version
+        run: |
+          npm i -g standard-version
+          standard-version
+      - name: Get new version
+        id: version
         run: |
             VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
             echo ::set-output name=version::$VERSION
-      - run: git push --follow-tags origin release/v${{ steps.version.outputs.version }}
+      - name: Setup git configuration
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "<41898282+github-actions[bot]@users.noreply.github.com>"
+      - name: Push new release branch
+        run: git push --follow-tags origin release/v${{ steps.version.outputs.version }}
 
   deploy-staging:
     runs-on: ubuntu-latest
