--- a/.github/workflows/hotfix.yml
+++ b/.github/workflows/hotfix.yml
@@ -11,7 +11,8 @@ jobs:
     outputs:
       release_branch: release/v${{ steps.version.outputs.version }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout current release branch
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.ref_name }}
       - name: Setup git configuration
@@ -27,6 +28,10 @@ jobs:
         run: |
             VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' | tr -d '[[:space:]]')
             echo ::set-output name=version::$VERSION
+      - name: Checkout new release branch
+        uses: actions/checkout@v2
+        with:
+          ref: release/v${{ steps.version.outputs.version }}
       - name: Push new release branch
         run: git push -u --follow-tags origin release/v${{ steps.version.outputs.version }}
 
